--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://afchamis21.github.io/react-todo-app/",
+  "homepage": "afchamis21.github.io/react-todo-app/",
   "name": "desafio-01-todo",
   "private": true,
   "version": "0.0.0",
